syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "ContentProto";
option objc_class_prefix = "Content";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";

// flat-ent: Content
message ContentFlatData {
    option (routines.entity_type) = "Content";
    option (routines.keys).keys = "content_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: contentId
        
    string content_id = 1 [json_name = "content_id"];    
    string content_type_id = 2 [json_name = "content_type_id"];    
    string owner_content_id = 3 [json_name = "owner_content_id"];    
    string decorator_content_id = 4 [json_name = "decorator_content_id"];    
    string instance_of_content_id = 5 [json_name = "instance_of_content_id"];    
    string data_resource_id = 6 [json_name = "data_resource_id"];    
    string template_data_resource_id = 7 [json_name = "template_data_resource_id"];
    string data_source_id = 8 [json_name = "data_source_id"]; // DataSource
    string status_id = 9 [json_name = "status_id"]; // StatusItem
    string privilege_enum_id = 10 [json_name = "privilege_enum_id"]; // Enumeration    
    string service_name = 11 [json_name = "service_name"];    
    string custom_method_id = 12 [json_name = "custom_method_id"];    
    string content_name = 13 [json_name = "content_name"];    
    string description = 14 [json_name = "description"];    
    string locale_string = 15 [json_name = "locale_string"];
    string mime_type_id = 16 [json_name = "mime_type_id"]; // MimeType
    string character_set_id = 17 [json_name = "character_set_id"]; // CharacterSet    
    int64 child_leaf_count = 18 [json_name = "child_leaf_count"];    
    int64 child_branch_count = 19 [json_name = "child_branch_count"];    
    google.protobuf.Timestamp created_date = 20 [json_name = "created_date"];    
    string created_by_user_login = 21 [json_name = "created_by_user_login"];    
    google.protobuf.Timestamp last_modified_date = 22 [json_name = "last_modified_date"];    
    string last_modified_by_user_login = 23 [json_name = "last_modified_by_user_login"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 24 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 25 [json_name = "created_tx_stamp"];    
    string tenant_id = 26 [json_name = "tenant_id"]; 

    // extra
    google.protobuf.Struct extra = 76;
    map<string, google.protobuf.Any> attachments = 77 ;
}


// Content Association
message ContentAssocData {
    option (routines.entity_type) = "ContentAssoc";
    option (routines.keys).keys = "content_id, content_id_to, content_assoc_type_id, from_date";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: contentId, contentIdTo, contentAssocTypeId, fromDate
    // fields
        
    string content_id = 1 [json_name = "content_id"];    
    string content_id_to = 2 [json_name = "content_id_to"];
    string content_assoc_type_id = 3 [json_name = "content_assoc_type_id"]; // ContentAssocType    
    google.protobuf.Timestamp from_date = 4 [json_name = "from_date"];    
    google.protobuf.Timestamp thru_date = 5 [json_name = "thru_date"];
    string content_assoc_predicate_id = 6 [json_name = "content_assoc_predicate_id"]; // ContentAssocPredicate
    string data_source_id = 7 [json_name = "data_source_id"]; // DataSource    
    int64 sequence_num = 8 [json_name = "sequence_num"];    
    string map_key = 9 [json_name = "map_key"];    
    int64 upper_coordinate = 10 [json_name = "upper_coordinate"];    
    int64 left_coordinate = 11 [json_name = "left_coordinate"];    
    google.protobuf.Timestamp created_date = 12 [json_name = "created_date"];    
    string created_by_user_login = 13 [json_name = "created_by_user_login"];    
    google.protobuf.Timestamp last_modified_date = 14 [json_name = "last_modified_date"];    
    string last_modified_by_user_login = 15 [json_name = "last_modified_by_user_login"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 16 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 17 [json_name = "created_tx_stamp"];    
    string id = 18 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 23;
    map<string, google.protobuf.Any> attachments = 24;
}


// Content Attribute
message ContentAttributeData {
    option (routines.entity_type) = "ContentAttribute";
    option (routines.keys).keys = "content_id, attr_name";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: contentId, attrName
    // fields
        
    string content_id = 1 [json_name = "content_id"];    
    string attr_name = 2 [json_name = "attr_name"];    
    string attr_value = 3 [json_name = "attr_value"];    
    string attr_description = 4 [json_name = "attr_description"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 6 [json_name = "created_tx_stamp"];    
    string id = 7 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 9;
    map<string, google.protobuf.Any> attachments = 10;
}


// Content Role
message ContentRoleData {
    option (routines.entity_type) = "ContentRole";
    option (routines.keys).keys = "content_id, party_id, role_type_id, from_date";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: contentId, partyId, roleTypeId, fromDate
    // fields
        
    string content_id = 1 [json_name = "content_id"];    
    string party_id = 2 [json_name = "party_id"];    
    string role_type_id = 3 [json_name = "role_type_id"];    
    google.protobuf.Timestamp from_date = 4 [json_name = "from_date"];    
    google.protobuf.Timestamp thru_date = 5 [json_name = "thru_date"];    
    google.protobuf.Timestamp last_updated_tx_stamp = 6 [json_name = "last_updated_tx_stamp"];    
    google.protobuf.Timestamp created_tx_stamp = 7 [json_name = "created_tx_stamp"];    
    string id = 8 [json_name = "id"];
        

    // extra
    google.protobuf.Struct extra = 12;
    map<string, google.protobuf.Any> attachments = 13;
}


